--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
