--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,25 +3,32 @@ server:
 
 path:
   local: 'D:\\img-gen\\imgs\\'
-  remote: 'http://127.0.0.1:12088/imgs/'
+  remote: 'https://lowavl.osmiumarc.top/imgs/'
+
 
 spring:
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource # 数据源类型：HikariCP
+    type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
-      connection-timeout: 30000       # 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException， 默认:30秒
-      minimum-idle: 5                 # 最小连接数
-      maximum-pool-size: 20           # 最大连接数
-      auto-commit: true               # 自动提交
-      idle-timeout: 600000            # 连接超时的最大时长（毫秒），超时则被释放（retired），默认:10分钟
-      pool-name: DateSourceHikariCP     # 连接池名字
-      max-lifetime: 1800000           # 连接的生命时长（毫秒），超时而且没被使用则被释放（retired），默认:30分钟 1800000ms
+      connection-timeout: 30000
+      minimum-idle: 5
+      maximum-pool-size: 20
+      auto-commit: true
+      idle-timeout: 600000
+      pool-name: DateSourceHikariCP
+      max-lifetime: 1800000
       connection-test-query: SELECT 1
-    url: jdbc:mysql://127.0.0.1:3306/test_db?useUnicode=true&serverTimezone=Asia/Shanghai #url: jdbc:mysql://127.0.0.1:3306/test_db?useSSL=false&useUnicode=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3307/test_db?useUnicode=true&serverTimezone=Asia/Shanghai
     password: ''
     username: root
+  security:
+    user:
+      name: 111
+      password: 123456
 
 mybatis:
   type-aliases-package: com.micerlabs.pojo
   mapper-locations: classpath:mapper/*.xml
+
+debug: true
