--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       max-lifetime: 1800000
       connection-test-query: SELECT 1
     url: jdbc:mysql://127.0.0.1:3306/test_db?useUnicode=true&serverTimezone=Asia/Shanghai
-    password: 'lzs713000'
+    password: ''
     username: root
   security:
     user:
